--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         with:
           # 你的 GitHub 的名称
-          github_user_name: Kyire6
+          github_user_name: AIgniteLUO
           # 生成的 .gif 图存储的位置
           gif_out_path: dist/github-snake.gif
           # 生成的 .gif 图存储的位置
